--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -594,6 +594,13 @@
                   ><span class="dash-mtext">Web Users Contact</span></a
                 >
               </li>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/milestones/list" class="dash-link"
+                  ><span class="dash-micon"
+                    ><i class="fa-solid"></i> </span
+                  ><span class="dash-mtext">Milestones</span></a
+                >
+              </li>
               <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
                 <a href="#" class="dash-link menu-toggle nav-link has-dropdown"
                   ><span class="dash-micon">
@@ -641,6 +648,9 @@
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/web_hero/list">Hero</a>
+                    </li>
+                    <li class="dropdown-item">
+                      <a href="/admin/web_aboutus/list">About Us</a>
                     </li>
                     <!-- <li class="dropdown-item">
                       <a href="/admin/view_full_answer/list"
