--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -569,6 +569,14 @@
                   <span class="dash-mtext text-w">Orders</span>
                 </a>
               </li>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/blog/list" class="dash-link">
+                  <span class="dash-micon"
+                    ><i class="fa-solid fa-receipt"></i
+                  ></span>
+                  <span class="dash-mtext text-w">Blogs</span>
+                </a>
+              </li>
 
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/shortvideo/list" class="dash-link">
