--- a/views/admin/orders-list.ejs
+++ b/views/admin/orders-list.ejs
@@ -52,15 +52,14 @@
                             : " " %>
                           </td>
                           <td>
-                            <%= paymentData.subscription_plan_id ? paymentData.subscription_plan_id.month
-                            : " " %> Month
+                            <%= paymentData.subscription_plan_id ? paymentData.subscription_plan_id.duration
+                            : " " %>
                           </td>
                           <td><%= paymentData.amount %></td>
                           <td><%= paymentData.order_id %></td>
                           <td><%= paymentData.receipt_id %></td>
                           <td>
-                            <%= new Date(paymentData.created_at).toLocaleDateString('en-GB')
-                            %>
+                            <%= paymentData.created_at%>
                           </td>
                         </tr>
                         <% }); %> <% } %>
@@ -79,24 +78,6 @@
 </div>
 <!-- Main Content -->
 
-<%
-function convertTimeStampToDate(date){
-   date = Number(date)
-      var d = new Date(date),
-         month = '' + (d.getMonth() + 1),
-         day = '' + d.getDate(),
-         year = d.getFullYear();
-
-   if (month.length < 2)
-   month = '0' + month;
-   if (day.length < 2)
-   day = '0' + day;
-   var date = new Date();
-   date.toLocaleDateString();
-
-   return [day, month, year].join('-');
-}
-%>
 
  <%- include ('partials/footer.ejs') %>
 <script>
