--- a/views/admin/trainer-details.ejs
+++ b/views/admin/trainer-details.ejs
@@ -162,7 +162,7 @@
                         </tr>
                         <% } else {%> <% trainerDetails.classes.forEach(function(schedule,index){ %>
                         <td><%= index+1 %></td>
-                        <td><%= schedule.user.first_name+" "+ schedule.user.last_name%></td>
+                        <td><%= schedule.user.name%></td>
                         <td><%= schedule.date %></td>
                         <td><%= schedule.time %></td>
                         <td><%= schedule.status %></td>
